[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://vr_offices/ui/VrOfficesManagerDialogueOverlay.gd" id="1"]
[ext_resource type="PackedScene" path="res://vr_offices/ui/DialogueOverlay.tscn" id="2"]

[node name="VrOfficesManagerDialogueOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
visible = false
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
color = Color(0, 0, 0, 0.45)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
anchors_preset = 15
anchor_left = 0.04
anchor_top = 0.06
anchor_right = 0.96
anchor_bottom = 0.96
mouse_filter = 0

[node name="RootVBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="Panel/RootVBox"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/RootVBox/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Manager"

[node name="CloseButton" type="Button" parent="Panel/RootVBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="Body" type="HSplitContainer" parent="Panel/RootVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 340

[node name="LeftDialogueHolder" type="Control" parent="Panel/RootVBox/Body"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EmbeddedDialogue" parent="Panel/RootVBox/Body/LeftDialogueHolder" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RightPreview" type="VBoxContainer" parent="Panel/RootVBox/Body"]
layout_mode = 2
custom_minimum_size = Vector2(380, 0)
size_flags_vertical = 3

[node name="PreviewContainer" type="SubViewportContainer" parent="Panel/RootVBox/Body/RightPreview"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="PreviewViewport" type="SubViewport" parent="Panel/RootVBox/Body/RightPreview/PreviewContainer"]
unique_name_in_owner = true
size = Vector2i(540, 540)
render_target_update_mode = 2
own_world_3d = true

[node name="PreviewRoot" type="Node3D" parent="Panel/RootVBox/Body/RightPreview/PreviewContainer/PreviewViewport"]
unique_name_in_owner = true

[node name="PreviewLight" type="DirectionalLight3D" parent="Panel/RootVBox/Body/RightPreview/PreviewContainer/PreviewViewport"]
light_energy = 1.4
rotation = Vector3(-0.85, -0.9, 0.0)

[node name="PreviewCamera" type="Camera3D" parent="Panel/RootVBox/Body/RightPreview/PreviewContainer/PreviewViewport"]
unique_name_in_owner = true
position = Vector3(0, 1.1, 2.2)
fov = 35.0

[node name="IdentityPanel" type="PanelContainer" parent="Panel/RootVBox/Body/RightPreview"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 68)

[node name="IdentityVBox" type="VBoxContainer" parent="Panel/RootVBox/Body/RightPreview/IdentityPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IdentityNameLabel" type="Label" parent="Panel/RootVBox/Body/RightPreview/IdentityPanel/IdentityVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "对象：-"

[node name="IdentityWorkspaceLabel" type="Label" parent="Panel/RootVBox/Body/RightPreview/IdentityPanel/IdentityVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "工作区：-"
